@@ -4113,6 +4113,7 @@ int util_write_configfile(void)
   if (screen_show_cpu_temp.v==0)              ADD_STRING_CONFIG,"--no-cpu-temp");
   if (screen_show_fps.v==0)                   ADD_STRING_CONFIG,"--no-fps");
   if (opcion_no_welcome_message.v)                     ADD_STRING_CONFIG,"--nowelcomemessage");
+  if (xanniversary_logo.v)                    ADD_STRING_CONFIG,"--enable-xanniversary-logo");
 
   if (menu_hide_vertical_percentaje_bar.v) ADD_STRING_CONFIG,"--hide-menu-percentage-bar");
 
