@@ -1,6 +1,7 @@
 Version XI - xxxx edition. 25 September 2023
 
 Allow to not save configuration when exiting ZEsarUX
+Allow to select normal ZEsarUX logo or X Anniversary logo
 
 ----
 
